--- a/pagecontent/dm-photo-editor.html
+++ b/pagecontent/dm-photo-editor.html
@@ -3,12 +3,11 @@
     <button id="text">加入文字</button>
     <button id="transformer">縮放/旋轉</button>
     <button id="move">移動</button>
+    
     <form method="post" action="upload.php">
     <input type="hidden" name="imagestring">
     <input type="button" value="儲存圖片" id="save">
     <input type="submit" value="確認上傳" id="upload" disabled=true/>
-    <br />
-    <img id="show_image" src="">
     </form>
     <div id="container"></div>
     <script>
@@ -35,15 +34,10 @@
 
       stage.add(layer);
 
-      //stage.container().style.backgroundColor='white';
-
-  // create shape
   var b=0, b1=0;
 
-  //document.getElementById('upload').disabled=true;
 
   function drawImage(imageObj) {
-        // darth vader
         var Img = new Konva.Image({
           image: imageObj,
           x: stage.width() / 2 - 200 / 2,
@@ -73,7 +67,15 @@
           function () {
             tr.hide();
         });
-      }
+        Img.on('pointerclick',function(){
+          container.addEventListener('keydown', function (e) {
+            if (e.keyCode === 46) {
+              console.log('delete');
+            }
+            e.preventDefault();
+          });
+      })
+    }
 
       const fileUploader = document.querySelector('#file-uploader');
 
